--- a/package.json
+++ b/package.json
@@ -3,14 +3,6 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
-    "@types/auth0-js": "^9.10.6",
-    "@types/history": "^4.7.3",
-    "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
-    "@types/react": "16.9.2",
-    "@types/react-dom": "16.9.0",
-    "@types/react-router": "^5.0.3",
-    "@types/react-router-dom": "^4.3.5",
     "auth0-js": "^9.11.3",
     "autobind-decorator": "^2.4.0",
     "bootstrap": "^4.3.1",
@@ -21,6 +13,16 @@
     "react-scripts": "3.1.1",
     "react-spotify-api": "^2.4.0",
     "typescript": "3.6.3"
+  },
+  "devDependencies": {
+    "@types/auth0-js": "^9.10.6",
+    "@types/history": "^4.7.3",
+    "@types/jest": "24.0.18",
+    "@types/node": "12.7.5",
+    "@types/react": "16.9.2",
+    "@types/react-dom": "16.9.0",
+    "@types/react-router": "^5.0.3",
+    "@types/react-router-dom": "^4.3.5"
   },
   "scripts": {
     "start": "react-scripts start",
