--- a/package.json
+++ b/package.json
@@ -16,11 +16,11 @@
     "typescript": "3.6.3"
   },
   "devDependencies": {
-    "@types/dotenv": "^6.1.1",
     "@types/auth0-js": "^9.10.6",
+    "@types/dotenv": "^6.1.1",
     "@types/history": "^4.7.3",
     "@types/jest": "24.0.18",
-    "@types/node": "12.7.5",
+    "@types/node": "^12.7.5",
     "@types/react": "16.9.2",
     "@types/react-dom": "16.9.0",
     "@types/react-router": "^5.0.3",
